--- a/PCS_Notes.ipynb
+++ b/PCS_Notes.ipynb
@@ -399,15 +399,248 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 1: Ouput \n",
+    "# Lesson 2: Data Types \n",
     "\n",
-    "General Terms\n",
+    "## General Terms\n",
     "    •    Concatenation: Concatenation is the process of combining two strings by using the plus sign as a connector to place them next to each other.\n",
-    "    •    Output: Output is what the computer presents to the user, including text printed on screen, graphics, sounds, and 3D printed objects. It involves translating digital information into a format humans can understand.\n",
-    "    •    Sep Parameters: Sep parameters, including 'and' and 'equals', are used for formatting the output of a print function. The Sep parameter specifies a separator between outputted arguments, while the end parameter specifies what to print at the end of the print statement.\n",
+    "    •    Data Types: Data types in programming define the kind of data that can be stored inside a variable, specifying the type of value, the amount of computer memory needed, and the operations that can be performed on the data.\n",
+    "    •    Floats: Floats are a data type in Python representing numbers with a decimal point, used for numerical calculations that involve fractions or decimals.\n",
+    "    •    Int: Int is a function in Python used for typecasting values into integers, converting numerical data or strings into whole numbers.\n",
+    "    •    Integer: Integers are a data type in Python representing whole numbers without a decimal point, used for numerical calculations that do not require fractions or decimals.\n",
+    "    •    Str: Str is a function in Python used for typecasting values into strings, converting data into text or alphanumeric representations.\n",
+    "    •    Strings: Strings are a data type in Python consisting of characters surrounded by either a single or double quote, used to represent text or alphanumeric data.\n",
+    "    •    Typecasting: Typecasting is the process of converting the values of one data type to another data type, enabling compatibility and operations between different data types.\n",
     "\n",
-    "Summary:\n",
-    "    •    The lesson on output covers various key concepts in programming. Output refers to what the computer presents to the user, such as text, graphics, sounds, and even physical objects. Concatenation, represented by the plus sign, combines strings together. Escape characters, like backslash n and backslash t, are used to insert special characters into strings. Sep parameters, including separation and end parameters, help format the output of the print function. Separation specifies a separator between arguments, while end determines what to print at the end of the statement. Understanding these concepts is essential for effectively manipulating and presenting output in programming."
+    "## Summary:\n",
+    "### Understanding Data Types and Casting in Python\n",
+    "    •    The discussion on data types and casting in Python covers the types of data that can be stored in variables, such as strings, integers, and floats. Strings are characters surrounded by quotes, integers are whole numbers, and floats are numbers with decimal points. Casting involves changing data types using functions like int, float, and str. Variables in Python are containers for storing data, with rules for naming and usage. Input values are stored as strings by default, requiring typecasting for mathematical operations. Typecasting involves converting data types, such as from string to integer using int() or from integer to string using str(). Errors can occur when trying to perform operations on incompatible data types. Understanding data types, casting, and variable usage is essential for effective programming in Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Data type examples: \n",
+    "age = 25       # Integer\n",
+    "pi = 3.14159   # Float\n",
+    "name = \"Alice\" # String"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 3: User Input \n",
+    "\n",
+    "## General Terms\n",
+    "    •    Argument: A value provided to a function when it is called.\n",
+    "    •    Assignment: The act of storing a value in a variable.\n",
+    "    •    Function: A named section of a program that performs a specific task.\n",
+    "    •    Input: A function that retrieves data entered by the user.\n",
+    "    •    Integer: Integers are a data type in Python representing whole numbers without a decimal point, used for numerical calculations that do not require fractions or decimals.\n",
+    "    •    Print: A function that sends data to the console for display to the user.\n",
+    "    •    User Input: Data provided by the user to a program, typically collected using the input function.\n",
+    "\n",
+    "## Summary:\n",
+    "### The Importance of User Input and Variables in Programming\n",
+    "    •    The discussion in the video focuses on the importance of user input in programming, specifically the distinction between print and input functions. Print is used to display information to the user, while input is used to collect data from the user, making programs interactive. Input function reads user data and returns it to the program, emphasizing the need to assign the input to a variable to retain the information. Variables store data in memory and can be used to manipulate and display user input. The video also explains how to format output using strings and variables, highlighting the use of concatenation with the plus sign. By including spaces and formatting within strings, the output can be structured effectively. The key takeaway is that input function prompts user interaction, while print function communicates information, and utilizing variables correctly is essential for storing and manipulating user input effectively in programming."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#User input examples:\n",
+    "username = input(\"What is your name? \")\n",
+    "print(\"Hello,\", username)\n",
+    "\n",
+    "age = int(input(\"How old are you? \"))\n",
+    "print(\"You are\", age, \"years old.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 4: String Operators \n",
+    "\n",
+    "## General Terms\n",
+    "    •    Operators: Symbols that can be used to modify strings, etc.\n",
+    "    •    Strings: Text in python that is surrounded by a quotations\n",
+    "\n",
+    "## Summary:\n",
+    "    •    The discussion in the video focuses on the importance of operators to manipulate strings in programming. Strings can be combined using the + operator. You can also repeat strings using the * operator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#String Operators examples: \n",
+    "greeting = \"Hello\" + \", \" + \"world!\"\n",
+    "repeated_greeting = \"Ha!\" * 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 5: Comments \n",
+    "\n",
+    "## General Terms\n",
+    "    •    Comments: Text in a program that is ignored by the python interpreter.\n",
+    "    •    Strings: Text in python that is surrounded by a quotations\n",
+    "\n",
+    "## Summary:\n",
+    "    •    The discussion in the video focuses on the importance of comments in programming. Comments are used to explain code and are ignored by the interpreter. Single-line comments start with #."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Comments examples:\n",
+    "# This is a single-line comment\n",
+    "print(\"Hello\")  # This is an inline comment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 6: Programming Languages \n",
+    "\n",
+    "## Summary:\n",
+    "    •    Python is a high-level, interpreted programming language that is widely used for a variety of applications, including:\n",
+    "    •    Web development\n",
+    "    •    Data analysis and visualization\n",
+    "    •    Artificial intelligence and machine learning\n",
+    "    •    Automation and scripting\n",
+    "    •    Scientific computing\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unit 3: Number Calculations and Data\n",
+    "## Lesson 1: Basic Calculations \n",
+    "\n",
+    "## General Terms\n",
+    "    •    Arithmetic: Basic mathematical operations such as adding, subtracting, multiplying, and dividing numbers.\n",
+    "    •    Exponets: Mathematical operation that involves raising a number to a power, denoted by the double star symbol (**) in Python.\n",
+    "    •    Operators: SSymbols in programming that perform actions on values and variables, such as addition, subtraction, multiplication, division, and exponentiation.\n",
+    "    •    Order of Operations: Rules that dictate the sequence in which mathematical operations should be performed, typically following the acronym PEMDAS (Parentheses, Exponents, Multiplication and Division, Addition and Subtraction).\n",
+    "    •    PEMDAS: An acronym representing the order of operations in mathematics: Parentheses, Exponents, Multiplication and Division, Addition and Subtraction.\n",
+    "    •    Operators: SSymbols in programming that perform actions on values and variables, such as addition, subtraction, multiplication, division, and exponentiation.\n",
+    "\n",
+    "\n",
+    "## Summary:\n",
+    "### Mastering Basic Calculations with Python: Syntax, Operators, and Order of Operations\n",
+    "    •    In a lesson on basic calculations using computers, Python is introduced as a tool for solving arithmetic problems like addition, subtraction, multiplication, and division. The lesson objectives include defining and utilizing floats, operators, and assignments, as well as understanding basic operation symbols and performing order of operations. Variables are created to store values, and calculations are performed using the correct syntax. The importance of following the order of operations (PEMDAS) is emphasized, with parentheses taking precedence. Floats are used for decimal values, such as in temperature conversions from Fahrenheit to Celsius. Exponents in Python are denoted by two stars (**), and assignment operators (equal sign) are used to assign values to variables. The main operators (+, -, *, /, **) are highlighted for performing mathematical actions. The lesson stresses the significance of correct syntax and order of operations in Python programming for accurate calculations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Basic Calculation examples:\n",
+    "x = 10\n",
+    "y = 3\n",
+    "print(x + y)   # 13\n",
+    "print(x - y)   # 7\n",
+    "print(x * y)   # 30\n",
+    "print(x / y)   # 3.3333333333333335"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 2: Modular Division \n",
+    "\n",
+    "## General Terms\n",
+    "    •    Conversions: Conversions involve changing units or values from one form to another, such as converting minutes to hours or inches to feet. Modular division can be used for conversions.\n",
+    "    •    Divisibility: Divisibility is the property of one number being divisible by another without leaving a remainder. Modular division can be used to check divisibility.\n",
+    "    •    Even or Odd Number: Even numbers are integers that are divisible by 2 without leaving a remainder, while odd numbers are integers that are not divisible by 2 without leaving a remainder. Modular division can help identify even and odd numbers.\n",
+    "    •    Modular Division: Modular division is a mathematical operation that involves finding the remainder of a division between two whole numbers. It is performed using the modulo operator, represented by a percent sign (%), and only works with integers, not decimals or floats.\n",
+    "    •    Modulo Operator: The modulo operator, represented by a percent sign (%), is used in modular division to find the remainder of a division between two whole numbers.\n",
+    "    •    Prime Numbers: Prime numbers are integers greater than 1 that are only divisible by 1 and themselves. Modular division can be used in algorithms to identify prime numbers.\n",
+    "    •    Remainder: The remainder is the amount left over after dividing one whole number by another whole number in a division operation. It is the result of modular division.\n",
+    "    •    Undefined: Undefined refers to a situation where a mathematical operation or division by zero does not have a defined result. Dividing by zero is undefined because there is no number that can be multiplied by zero to result in a non-zero integer.\n",
+    "## Summary:\n",
+    "### Enhancing Number Operations with Python’s Math Module and Built-in Functions\n",
+    "    •    In the lesson on built-in functions, new tools for number operations were introduced, such as the math module in Python. By importing modules like math, additional features like square roots, absolute values, and exponents can be utilized. Modules are collections of code that add functionality to programs, with some built into Python and others created by programmers. Functions, which are collections of commands given a name, are essential in programming. The math module provides functions like fabs for absolute values, pow for raising numbers to a power, and sqrt for square roots. To use these functions, the module name is followed by a period and the function name, along with the necessary parameters in parentheses. Importing modules allows access to pre-written code, making programming more flexible and efficient. Functions like print, input, int, str, and float are commonly used for displaying information, user interaction, and data manipulation. The lesson emphasizes the importance of understanding functions, modules, and the process of importing them to enhance programming capabilities.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Modular Division examples:\n",
+    "print(10 % 3)  # 1\n",
+    "print(18 % 5)  # 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 3: Built-in Functions \n",
+    "\n",
+    "## General Terms\n",
+    "    •    Absolute Value: The positive value of a number, regardless of its sign. Length from zero.\n",
+    "    •    Built-in Functions:Functions that are already available in a programming language without the need for additional code or libraries to define them.\n",
+    "    •    Documentation: Information provided about a program, module, or function, including descriptions, examples, and expected outputs.\n",
+    "    •    Dot Operator: The period symbol used in Python to access methods or attributes of an object or module.\n",
+    "    •    Import Statement: A command in Python that allows pulling in modules filled with code to add extra features to a program.\n",
+    "    •    Math Module: A module in Python that provides methods for mathematical operations such as square root, absolute value, and exponents\n",
+    "    •    Method: A special type of function in Python that is associated with a specific object or class and is called using dot notation.\n",
+    "## Summary:\n",
+    "### Enhancing Number Operations with Python’s Math Module and Built-in Functions\n",
+    "    •    In the lesson on built-in functions, new tools for number operations were introduced, such as the math module in Python. By importing modules like math, additional features like square roots, absolute values, and exponents can be utilized. Modules are collections of code that add functionality to programs, with some built into Python and others created by programmers. Functions, which are collections of commands given a name, are essential in programming. The math module provides functions like fabs for absolute values, pow for raising numbers to a power, and sqrt for square roots. To use these functions, the module name is followed by a period and the function name, along with the necessary parameters in parentheses. Importing modules allows access to pre-written code, making programming more flexible and efficient. Functions like print, input, int, str, and float are commonly used for displaying information, user interaction, and data manipulation. The lesson emphasizes the importance of understanding functions, modules, and the process of importing them to enhance programming capabilities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 4: Random Numbers \n",
+    "\n",
+    "## General Terms\n",
+    "    •    List: A collection of items in a particular order. Lists are mutable, meaning their elements can be changed.\n",
+    "    •    Module: A file containing Python code that defines functions, classes, and variables. Modules help organize code and make it reusable.\n",
+    "    •    Random Numbers: Numbers generated in a non-deterministic manner, typically used for various purposes such as modeling, simulation, and gaming.\n",
+    "    •    Seed Value: A starting point for the generation of random numbers. It initializes the random number generator.\n",
+    "    •    Sequence: An ordered collection of similar or different data types in Python\n",
+    "## Summary:\n",
+    "### Exploring the Power of Randomness: Generating Random Numbers in Python\n",
+    "    •    The discussion focuses on utilizing the random module in Python to generate random numbers for various purposes. By importing the random module, functions like randint, random, and choice can be used to obtain random integers, floats, or select elements from a sequence. The process involves setting parameters for the desired range of random numbers. An example scenario is creating a unique password consisting of a random number between 1 and 100, an animal name, and another number between 1 and 10. Random numbers are commonly used in modeling, simulations, graphics, and game development. The key functions discussed are randint for random integers, random for random floats, and choice for selecting elements from a sequence. The module allows for the generation of random values based on specified parameters, enabling diverse applications in programming."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Random Numbers example:\n",
+    "import random\n",
+    "\n",
+    "print(random.randint(1, 10))  # Random integer between 1 and 10\n",
+    "print(random.random())        # Random float between 0 and 1"
    ]
   }
  ],
