--- a/PCS_Notes.ipynb
+++ b/PCS_Notes.ipynb
@@ -40,7 +40,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "```python\n",
     "# Basic command structure\n",
     "player.move(FORWARD, 1)\n",
     "player.place(GRASS)\n",
@@ -537,7 +536,7 @@
     "## General Terms\n",
     "    •    Arithmetic: Basic mathematical operations such as adding, subtracting, multiplying, and dividing numbers.\n",
     "    •    Exponets: Mathematical operation that involves raising a number to a power, denoted by the double star symbol (**) in Python.\n",
-    "    •    Operators: SSymbols in programming that perform actions on values and variables, such as addition, subtraction, multiplication, division, and exponentiation.\n",
+    "    •    Operators: Symbols in programming that perform actions on values and variables, such as addition, subtraction, multiplication, division, and exponentiation.\n",
     "    •    Order of Operations: Rules that dictate the sequence in which mathematical operations should be performed, typically following the acronym PEMDAS (Parentheses, Exponents, Multiplication and Division, Addition and Subtraction).\n",
     "    •    PEMDAS: An acronym representing the order of operations in mathematics: Parentheses, Exponents, Multiplication and Division, Addition and Subtraction.\n",
     "    •    Operators: SSymbols in programming that perform actions on values and variables, such as addition, subtraction, multiplication, division, and exponentiation.\n",
@@ -641,6 +640,229 @@
     "\n",
     "print(random.randint(1, 10))  # Random integer between 1 and 10\n",
     "print(random.random())        # Random float between 0 and 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unit 4: Makind Decisions\n",
+    "## Lesson 1:  Simple Ifs \n",
+    "\n",
+    "## General Terms\n",
+    "    •    Assigment Operator: An operator, represented by the equal sign, used to assign a value to a variable.\n",
+    "    •    Comparison: The act of evaluating two objects or values to determine if they are equal or not.\n",
+    "    •    If Statements: A structure used to determine if a condition is true or false. If the condition is true, a block of code is executed. If the condition is false, the block of code is skipped.\n",
+    "    •    Modulus Operator: An operator that returns the remainder of an integer division. It is represented by the percent symbol (%).\n",
+    "    •    Relational Operators: Operators used to compare how two values relate to each other. The result of the comparison is either true or false.\n",
+    "    •    Operators: Symbols in programming that perform actions on values and variables, such as addition, subtraction, multiplication, division, and exponentiation.\n",
+    "\n",
+    "\n",
+    "## Summary:\n",
+    "### Understanding If Statements and Relational Operators in Programming\n",
+    "    •    The lesson covers the basics of if statements and relational operators in programming. If statements are used to determine if a condition is true or false, executing a block of code if true and skipping it if false. The syntax includes the ”if” keyword followed by a condition and a colon, with the code block indented. Relational operators compare values, resulting in true or false outcomes. Examples include equal to, less than or equal to, greater than or equal to, and not equal to. The modulus operator returns the remainder of an integer division, useful for finding divisibility or classifying numbers. An example prompt asks the user to enter an integer, printing ”you are awesome” if the number is greater than or equal to 100. Overall, the lesson emphasizes the importance of if statements for decision-making and the use of relational operators for value comparison in programming."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if statement example:\n",
+    "x=int(input(\"Enter a number: \"))\n",
+    "if x <10:\n",
+    "      print(\"That seems small!\")\n",
+    "#temp example\n",
+    "temperature = 25\n",
+    "if temperature > 20:\n",
+    "    print(\"It's warm outside.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 2: If-Else Statements \n",
+    "\n",
+    "## General Terms\n",
+    "    •    Boolean: A boolean is a data type that represents true or false values, essential for conditional statements and logical operations in programming.\n",
+    "    •    Chain of Conditions: A chain of conditions refers to a series of conditional statements linked together to evaluate multiple scenarios in a program\n",
+    "    •    Elif Statement: An if-else statement is a structure used in order to have a program choose between two different sets of code, where if a condition is true, the if portion of that section will run, and if the condition is false, the else portion should run.\n",
+    "    •    Indented Code: Indented code refers to the lines of code that are formatted with indentation to indicate that they belong to a specific block, such as the code that executes under the if or else portion of an if-else statement.\n",
+    "    •    Sequence: An ordered collection of similar or different data types in Python\n",
+    "## Summary:\n",
+    "### Understanding If-Else Statements in Programming\n",
+    "    •    In this lesson, we focus on defining and coding an if-else statement, which is a fundamental structure in programming that allows a program to choose between two different sets of code based on a condition. The if statement executes when a specified condition is true, while the else statement runs when the condition is false. The syntax for an if-else statement begins with ”if,” followed by a condition and a colon, leading to an indented block of code that executes if the condition is met. Conversely, the else statement is written on a single line, followed by a colon, and contains the code that runs when the condition is not met. It’s crucial to note that only one section of code will execute—either the if or the else—never both. This means that the condition must evaluate to either true or false, ensuring that one part of the code is always skipped. To practice this concept, we can prompt users for a password and check if it matches a predefined string, such as ”drowssap.” Overall, the if-else statement is essential for controlling the flow of a program based on conditional logic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if-else statement example:\n",
+    "a=input(\"Enter a word: \")\n",
+    "if a==\"star\":\n",
+    "    print(\"Correct\")\n",
+    "else:\n",
+    "    print(\"Try again!\")\n",
+    "\n",
+    "#Example 2:\n",
+    "age = 17\n",
+    "if age >= 18:\n",
+    "    print(\"You can vote.\")\n",
+    "else:\n",
+    "    print(\"You can't vote yet.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 3: Else-If Statements\n",
+    "\n",
+    "## General Terms\n",
+    "    •    Condition: A condition is a statement that evaluates to either true or false, determining which portion of the if-else statement will execute.\n",
+    "    •    Else: A condition is a statement that evaluates to either true or false, determining which portion of the if-else statement will execute.\n",
+    "    •    Elif Statement:An elif statement, short for else if, is used to check a series of conditions one after another until the first true condition is found.\n",
+    "    •    Nested Conditions: Nested conditions are conditions within other conditions, allowing for more complex decision-making in programming.\n",
+    "    •    Order of Conditions: The order of conditions refers to the sequence in which conditions are evaluated, with the first true condition being the one that determines the code to be executed.\n",
+    "## Summary:\n",
+    "### Mastering Conditional Logic with ’elif’ Statements in Python\n",
+    "    •    The lesson discusses the concept of ”else if” statements in programming, which allow for checking multiple conditions and executing different code based on each condition’s truth value. The use of ”elif recaps the importance of structuring conditions in a logical order to ensure the correct code block is executed. An example provided is a video game scoring system where different star ratings are awarded based on point thresholds. The lesson emphasizes the use of ”elif” statements for scenarios with multiple conditions, as they efficiently handle chains of conditions. A practical exercise is suggested where users input their grade number, and the program outputs their corresponding high school classification. The lesson concludes by recommending the use of ”if” for one condition, ”if-else” for two conditions, and ”elif” for more than two conditions. The key term ”elif” is defined as a statement used to check a series of conditions in Python, stopping at the first true condition."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#elif statement example:\n",
+    "transaction=input(\"Do you want to deposit or withdrawal? \")\n",
+    "amount=int(input(\"Enter amount: \"))\n",
+    "balance =23\n",
+    "if transaction==\"deposit\":\n",
+    "    balance+=amount\n",
+    "    print(balance)\n",
+    "elif transaction == \"withdrawal\":\n",
+    "    if amount>balance:\n",
+    "        print(\"Can't have a negative balance\")\n",
+    "    else:\n",
+    "        balance-=amount\n",
+    "        print(balance)\n",
+    "\n",
+    "else:\n",
+    "    print(\"invalid transaction\")\n",
+    "\n",
+    "#Letter grade example:\n",
+    "score = 85\n",
+    "if score >= 90:\n",
+    "    print(\"A\")\n",
+    "elif score >= 80:\n",
+    "    print(\"B\")\n",
+    "elif score >= 70:\n",
+    "    print(\"C\")\n",
+    "else:\n",
+    "    print(\"D or F\")       "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 4: Logical Operators\n",
+    "\n",
+    "## General Terms\n",
+    "    •    AND Operator: The AND operator is a logical operator that checks that both expressions it connects are true. If both expressions are true, the overall condition is considered true.\n",
+    "    •    Boolean Expression: Boolean expressions are expressions that evaluate to either true or false. They are used in logical operations to determine the truth value of a condition.\n",
+    "    •    Logical Operators: Logical operators are used to connect multiple Boolean expressions in order to check for more than one condition at a time. They include keywords like 'and' and 'or' that work similarly to spoken language, where 'and' requires both expressions to be true, 'or' requires at least one expression to be true.\n",
+    "    •    NOT Operator: The NOT operator is a logical operator that evaluates the condition and returns the opposite Boolean value. If the condition is false, NOT makes it true; if the condition is true, NOT makes it false. \n",
+    "    •    NOT Operator: The OR operator is a logical operator that checks if at least one of the expressions it connects is true. If any of the expressions is true, the overall condition is considered true.\n",
+    "## Summary:\n",
+    "### Understanding Logical Operators in Programming\n",
+    "    •    Logical operators are essential tools in programming to check for multiple conditions simultaneously. They include ”and” and ”or,” which function similarly to spoken language. The ”and” operator requires both conditions to be true for the overall condition to be true, while the ”or” operator only needs one condition to be true. The ”not” operator provides the opposite evaluation of a condition. By using logical operators, programmers can create Boolean expressions to efficiently evaluate complex conditions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Logical Operator examples:\n",
+    "role=input(\"Are you a student, teacher or administrator? \")\n",
+    "if role== \"teacher\" or role== \"administrator\":\n",
+    "    print(\"Congrats you have gotten a key!\")\n",
+    "else:\n",
+    "    print(\"Unfortunately, no key for you!\")\n",
+    "\n",
+    "#Example 2:\n",
+    "is_student = True\n",
+    "is_adult = False\n",
+    "can_vote = is_student and is_adult\n",
+    "can_drive = is_student or is_adult\n",
+    "print(can_vote)   # False\n",
+    "print(can_drive)  # True\n",
+    "print(not is_adult) # True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unit 5: Loops and Repetition\n",
+    "## Lesson 1:  While Loops \n",
+    "\n",
+    "## General Terms\n",
+    "    •    Code Block: A code block is a group of statements or instructions that are grouped together and executed as a unit, often within loops or conditional statements.\n",
+    "    •    Condition: The condition in a loop determines whether the code inside the loop will run or not. It is evaluated each time the loop iterates.\n",
+    "    •    Control Variable: A control variable is what helps to control the entire while loop. It is used to track how many times the loop has been iterated or repeated and is updated within the loop to prevent an infinite loop.\n",
+    "    •    Increment: Incrementing a variable means increasing its value by a specified amount, usually by one in the context of loops.\n",
+    "    •    Indentation: Indentation is the practice of aligning code blocks to visually represent the structure of the code. In the context of loops, indentation is used to indicate the code that should run while the loop condition is true.\n",
+    "    •    Infinite Loop: An infinite loop is a loop that continues to repeat indefinitely because the condition for exiting the loop is never met.\n",
+    "    •    Initialization: Initialization refers to setting the initial value of a variable or control variable before entering a loop.\n",
+    "    •    Iteration: Iteration refers to the process of repeating a sequence of instructions or code multiple times.\n",
+    "    •    Loops: Loops give us the ability to repeat blocks of code based on a certain condition or for an exact number of times.\n",
+    "    •    Termination Condition: The termination condition is the condition that, when met, causes the loop to stop iterating and exit.\n",
+    "    •    While Loop: A while loop works similar to an if statement where a certain condition controls whether the code inside it will run or not. The code will keep on repeating as long as the condition is true, checking the condition each time after the code runs.\n",
+    "\n",
+    "\n",
+    "## Summary:\n",
+    "### Understanding While Loops: The Key Role of Control Variables\n",
+    "    •    Loops in programming allow for the repetition of code based on specific conditions or a set number of iterations. The while loop, similar to an if statement, executes code as long as a condition remains true. A key component is the control variable, such as ’num’, which is initialized, checked in the condition, and updated within the loop to prevent infinite looping. The four main steps of a while loop are: initializing the control variable, creating the loop with a condition based on the control variable, executing code while the condition is true, and updating the control variable within the loop. Failure to update the control variable can lead to an infinite loop. Examples demonstrate how while loops can be used to repeat actions a specific number of times or until a certain condition is met, such as prompting user input until a specific value is entered. Understanding and effectively utilizing control variables is essential for managing while loops and ensuring efficient code execution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 2: Count Variable\n",
+    "\n",
+    "## General Terms\n",
+    "    •    Control Variable: A variable, such as a count variable, used to control the flow of a loop or program.\n",
+    "    •    Count Variable: A variable used to control how many times a loop runs or keeps track of something in a loop.\n",
+    "    •    Sum Variable: A variable that keeps track of things each time through the loop and can be used to add or set a certain set of numbers.\n",
+    "## Summary:\n",
+    "### Understanding Count and Sum Variables in Programming Loops\n",
+    "    •    The video discusses count variables and sum variables in programming loops. A count variable tracks how many times a loop iterates, acting as a control variable. It is used to control when the loop stops based on user input. The sum variable, on the other hand, accumulates values each time the loop runs. In one example, a count variable is used to prompt the user to enter a positive number, counting how many attempts it takes. The key is to ensure the code is in the correct order to accurately track loop iterations and variable updates. Testing programs is crucial to identify and correct any issues. In summary, count variables control loop iterations, while sum variables accumulate values, and it is essential to organize code correctly and test programs for accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 3: Two Ways to End a Loop\n",
+    "\n",
+    "## General Terms\n",
+    "    •    Control Variable: A variable, such as a count variable, used to control the flow of a loop or program.\n",
+    "    •    Count Variable: A variable used to control how many times a loop runs or keeps track of something in a loop.\n",
+    "    •    Sum Variable: A variable that keeps track of things each time through the loop and can be used to add or set a certain set of numbers.\n",
+    "## Summary:\n",
+    "### Understanding Count and Sum Variables in Programming Loops\n",
+    "    •    The video discusses two ways to end a loop: using count variables or user input. When using a count variable, you know exactly how many times the loop will run, while user input is used when the number of iterations is unknown. The process involves initializing the control variable, creating a while loop with a condition based on the control variable, executing the loop code, and updating the control variable. For example, to print ”Python” 10 times, a count variable is used, incrementing the count until it reaches 10. On the other hand, if prompting the user to enter a certain number of values, user input is utilized. Additionally, the video demonstrates how to repeatedly prompt the user for a number greater than 100 until the condition is met. Lastly, it explains how to calculate the average of numbers entered by the user using a loop. The key takeaway is understanding when to use a count variable or user input based on whether the loop runs a specific number of times or the exact count is unknown. By following these guidelines, creating loops becomes a straightforward process."
    ]
   }
  ],
